fix: resolve JDK 11+ compiler and deprecation warnings
Signed-off-by: chaitanya <chaitanyakatore@gmail.com>